feat: Add project structure with modules, middleware, and core files
- Add auth module with routes, controller, service, validators, and types
- Add users module with repository and types
- Add core database files (db.ts for Prisma, mongo.ts for MongoDB)
- Add middleware for auth and role guards
- Add custom error handling
- Update TypeScript config and package dependencies
- Fix tsconfig.json syntax error

--- a/.gitignore
+++ b/.gitignore
@@ -139,7 +139,7 @@ playwright-report/
 .local/
 .cache/
 
-# Package manager lockfiles (uncomment if you want to ignore them)
+# Package manager lockfiles 
 # package-lock.json
 # yarn.lock
 # pnpm-lock.yaml
