--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
